# philosophers

./: CMakeLists.txt  README.md
lib/: argparse.c  ft_isdigit.c  ft_isspace.c  ft_itoa.c  ft_say_join.c  ft_strlcpy.c  ft_strlen.c  ft_usleep.c  get_time_us.c  lib.h  put_error.c
philo_one/: Makefile  main.c
philo_one/classes/philosopher/: philosopher_actions.c  philosopher_constructors.c  philosopher_lifetime.c  philosopher_say.c
philo_one/classes/table/: table_constructors.c  table_start_simulation.c
philo_one/includes/: philo_one.h  philosopher.h  table.h
philo_three/: Makefile  main.c  philo_three
philo_three/classes/philosopher/: philosopher_actions.c  philosopher_constructors.c  philosopher_lifetime.c  philosopher_say.c
philo_three/classes/table/: table_constructors.c  table_start_simulation.c
philo_three/includes/: philo_three.h  philosopher.h  table.h
philo_two/: Makefile  main.c
philo_two/classes/philosopher/: philosopher_actions.c  philosopher_constructors.c  philosopher_lifetime.c  philosopher_say.c
philo_two/classes/table/: table_constructors.c  table_start_simulation.c
philo_two/includes/: philo_two.h  philosopher.h  table.h
